test/libsolidity/semanticTests/errors/require_different_errors_same_parameters.sol
error AnError(uint256, string, uint256);
error AnotherError(uint256, string, uint256);

contract C
{
    function f() external pure
    {
        require(false, AnError(1, "two", 3));
    }

    function g() external pure
    {
        require(false, AnotherError(4, "five", 6));
    }
}

// ----
// f() -> FAILURE, hex"f55fefe3", hex"0000000000000000000000000000000000000000000000000000000000000001", hex"0000000000000000000000000000000000000000000000000000000000000060", hex"0000000000000000000000000000000000000000000000000000000000000003", hex"0000000000000000000000000000000000000000000000000000000000000003", hex"74776f0000000000000000000000000000000000000000000000000000000000"
// g() -> FAILURE, hex"44a06798", hex"0000000000000000000000000000000000000000000000000000000000000004", hex"0000000000000000000000000000000000000000000000000000000000000060", hex"0000000000000000000000000000000000000000000000000000000000000006", hex"0000000000000000000000000000000000000000000000000000000000000004", hex"6669766500000000000000000000000000000000000000000000000000000000"
